* Thu Jun 23 2011 Thunor <thunorsif@hotmail.com>
- Simplified the search for the "selection_mode" custom attribute in
  create_tree as I found a function that finds them and returns their
  values. Also, since there exists a GTK "selection-mode" property for
  other unrelated widgets I don't now distinguish between a "_" and "-".

* Tue Jun 21 2011 Thunor <thunorsif@hotmail.com>
- Function remove_selected_variable has been updated to accommodate the
  extended range of tree widget selection modes.

* Mon Jun 20 2011 Thunor <thunorsif@hotmail.com>
- Function widget_get_text_value has been updated to accommodate the
  extended range of tree widget selection modes.

* Sat Jun 18 2011 Thunor <thunorsif@hotmail.com>
- Changed ECOMM to ENDCOMM as it conflicts with errno.h.
- Removed the old files created by Automake.
- Removed a couple more auto-generated files.

* Fri Jun 17 2011 Thunor <thunorsif@hotmail.com>
- Added config.guess and config.sub.
- Applied the Moose / Debian 03_stdin PRG_STDIN patch.
- Applied the Patriot closewindow patch.
- Changed signal to gtkdialog_signal in glade_support.c.
- Changed the 90.00 examples to use /usr/local/bin.
- Applied the Debian 01_bashism dot rather than source patch.
- Added my pixmap/button-widget image refresh and scaling code.
- Removed unnecessary code from find_pixmap (locate etc.).
- Applied the Debian 02_documentation_paths /usr/local/bin/ patch.
- Added missing conversion type characters from tag_attributes.c:102.
- Added missing declaration in widgets.h:24.
- Added missing __func__ in variables.c:393.
- Added missing (char*) casts in variables.c:758 and 760.
- Added missing GTK_TREE_VIEW casts in automaton.c:1564 and 1586.
- Added missing (GDestroyNotify) cast in widgets.c:1259.
- Added missing (gchar*) cast in main.c:408.
- Fixed several 'ignoring return value' warnings.

* Mon Apr 9 2007 Laszlo Pere <pipas@linux.pte.hu> 0.7.20
- default policy changed ror crolled windows.